--- a/blocks/block-resources/assets/style.scss
+++ b/blocks/block-resources/assets/style.scss
@@ -1,5 +1,5 @@
 .se-block-resources {
-    @apply bg-white pt-[80px] pb-[83px] flex flex-col justify-center items-center gap-[48px];
+    @apply bg-white px-[87px] pt-[80px] pb-[83px] flex flex-col justify-center items-center gap-[48px];
 }
 
 .se-block-resources__header {
@@ -11,7 +11,7 @@
 }
 
 .se-block-resources__divider {
-    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[40px];
+    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[73px];
 }
 
 .se-block-resources__title {
@@ -38,7 +38,7 @@
 }
 
 .se-block-resources__content {
-    @apply flex max-w-[1266px] mx-[87px] flex-row items-start gap-[24px];
+    @apply flex max-w-[1266px] flex-row items-start gap-[24px];
 }
 
 .se-block-resources__main {
