--- a/blocks/slider/assets/style.scss
+++ b/blocks/slider/assets/style.scss
@@ -1,5 +1,5 @@
 .se-slider {
-    @apply relative bg-very-dark-blue pt-[160px] pb-[150px] px-[87px] flex flex-col gap-[70px] items-center cursor-pointer;
+    @apply relative bg-very-dark-blue pt-[48px] pb-[48px] sm:pt-[160px] sm:pb-[150px] px-[24px] sm:px-[87px] flex flex-col gap-[70px] items-center cursor-pointer;
 }
 
 .se-slider__overlay {
@@ -7,11 +7,11 @@
 }
 
 .se-slider__header {
-    @apply relative z-10 flex w-full max-w-[1266px] flex-row gap-[40px] items-center;
+    @apply relative z-10 flex w-full max-w-[414px] sm:max-w-[1266px] flex-row sm:gap-[40px] items-center;
 }
 
 .se-slider__header-divider {
-    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[73px];
+    @apply w-[32px] h-[0px] border-[1px] border-se-yellow -rotate-90 -ml-[28px] sm:-ml-[73px];
 }
 
 .se-slider__header-title {
@@ -19,7 +19,7 @@
 }
 
 .se-slider__controls {
-    @apply flex items-center gap-[40px] ml-auto cursor-pointer;
+    @apply hidden sm:flex items-center gap-[40px] ml-auto cursor-pointer;
 }
 
 .se-slider__progress-track {
@@ -39,11 +39,11 @@
 }
 
 .se-slider__slides {
-    @apply relative z-10 w-full max-w-[1266px] grid;
+    @apply relative z-10 w-full max-w-[414px] sm:max-w-[1266px] flex flex-col gap-[26px] sm:grid sm:gap-0;
 }
 
 .se-slider__slide {
-    @apply col-start-1 row-start-1 flex flex-row items-center gap-[304px];
+    @apply flex flex-col gap-[26px] sm:col-start-1 sm:row-start-1 sm:flex-row sm:items-center sm:gap-[304px];
 }
 
 .se-slider__slide.is-active {
@@ -51,7 +51,7 @@
 }
 
 .se-slider__text-col {
-    @apply w-[406px] flex-shrink-0;
+    @apply sm:w-[406px] flex-shrink-0;
 }
 
 .se-slider__text {
@@ -63,7 +63,7 @@
 }
 
 .se-slider__slide-title {
-    @apply text-[32px] font-[500] leading-[1.25] mt-[40px];
+    @apply text-[32px] font-[500] leading-[1.25] mt-[32px] sm:mt-[40px];
 }
 
 .se-slider__slide-desc {
@@ -71,7 +71,7 @@
 }
 
 .se-slider__cta {
-    @apply relative overflow-hidden w-[145px] h-[48px] border-[1px] border-se-yellow rounded-[4px] px-[24px] py-[15px] mt-[40px] flex justify-center items-center;
+    @apply relative overflow-hidden w-[145px] h-[48px] border-[1px] border-se-yellow rounded-[4px] px-[24px] py-[15px] mt-[32px] sm:mt-[40px] flex justify-center items-center;
 }
 
 .se-slider__cta-text {
@@ -92,11 +92,11 @@
 }
 
 .se-slider__image-wrap {
-    @apply w-[900px] h-[570px] py-[25px] px-[24px] border-[1px] border-se-dark-navy rounded-[24px] flex-shrink-0;
+    @apply w-[511px] h-[323.63px] sm:w-[900px] sm:h-[570px] py-[14.2px] sm:py-[25px] px-[16.63px] sm:px-[24px] border-[1px] border-se-dark-navy rounded-[24px] flex-shrink-0;
 }
 
 .se-slider__image {
-    @apply w-[852px] h-[520px] rounded-[16px] bg-white shadow-[0_0_160px_rgba(46,123,255,0.5)];
+    @apply w-[483.75px] h-[295.24px] sm:w-[852px] sm:h-[520px] rounded-[16px] bg-white shadow-[0_0_160px_rgba(46,123,255,0.5)];
 }
 
 .se-slider__image.is-shadow-alt {
