--- a/blocks/testimonial/assets/style.scss
+++ b/blocks/testimonial/assets/style.scss
@@ -1,14 +1,14 @@
 
 .se-testimonial {
-    @apply w-full bg-no-repeat bg-cover bg-center pt-[160px] pb-[149px] pl-[197px] pr-[133px] flex flex-col items-center justify-center;
+    @apply w-full bg-no-repeat bg-cover bg-center py-[48px] px-[24px] sm:pt-[160px] sm:pb-[149px] sm:pl-[197px] sm:pr-[133px] flex flex-col items-center justify-center;
 }
 
 .se-testimonial__inner {
-    @apply w-full max-w-[1266px] flex flex-row items-center gap-[130px];
+    @apply w-full max-w-[414px] sm:max-w-[1266px] flex flex-col-reverse sm:flex-row items-start sm:items-center gap-[32px] sm:gap-[130px];
 }
 
 .se-testimonial__content {
-    @apply w-[728px] h-[299px] flex flex-col gap-[40px];
+    @apply w-full sm:w-[728px] h-auto sm:h-[299px] flex flex-col gap-[32px] sm:gap-[40px];
 }
 
 .se-testimonial__logo {
@@ -20,7 +20,7 @@
 }
 
 .se-testimonial__body {
-    @apply h-[224px] gap-[64px] flex flex-col justify-start;
+    @apply h-auto sm:h-[224px] gap-[32px] sm:gap-[64px] flex flex-col justify-start;
 }
 
 .se-testimonial__quote {
@@ -28,7 +28,7 @@
 }
 
 .se-testimonial__footer {
-    @apply w-[727px] flex flex-row justify-between;
+    @apply w-full sm:w-[727px] flex flex-row justify-between;
 }
 
 .se-testimonial__divider-group {
@@ -64,11 +64,11 @@
 }
 
 .se-testimonial__aside {
-    @apply w-[252px] flex flex-col gap-[32px] items-start;
+    @apply w-full sm:w-[252px] flex flex-row sm:flex-col gap-[16px] sm:gap-[32px] items-start;
 }
 
 .se-testimonial__photo {
-    @apply w-[191px] h-[191px] rounded-[6px];
+    @apply size-[142px] sm:size-[191px] rounded-[6px];
 }
 
 .se-testimonial__meta {
