--- a/blocks/slider/assets/style.scss
+++ b/blocks/slider/assets/style.scss
@@ -7,7 +7,7 @@
 }
 
 .se-slider--desktop {
-    @apply hidden sm:block;
+    @apply hidden sm:flex sm:flex-col sm:gap-[75px];
 }
 
 .se-slider__overlay {
