--- a/blocks/testimonial/assets/style.scss
+++ b/blocks/testimonial/assets/style.scss
@@ -64,7 +64,7 @@
 }
 
 .se-testimonial__aside {
-    @apply w-full sm:w-[252px] flex flex-row sm:flex-col gap-[16px] sm:gap-[32px] items-start;
+    @apply w-full sm:w-[252px];
 }
 
 .se-testimonial__photo {
