fix and responsive mobile single page

--- a/fe/src/styles/block.scss
+++ b/fe/src/styles/block.scss
@@ -4,3 +4,5 @@
 @forward '../../../blocks/block-resources/assets/style.scss';
 @forward '../../../blocks/testimonial/assets/style.scss';
 @forward '../../../blocks/CTAs/assets/style.scss';
+@forward '../../../blocks/blog-banner/assets/style.scss';
+@forward '../../../blocks/blog-footer/assets/style.scss';
